# generic-xmr-scanner

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp
.circleci/: config.yml
api/: README.md
cmake/: FindDrogon.cmake  FindJsoncpp.cmake
config/: README.md  config.json  default_addresses.json
html/: Dockerfile  README.md  index.html
html/css/: _base.css  _util.css
scripts/: pserverssl.py
src/: BlockchainSetup.cpp  JsonBuilder.h  SearchCtrl.cpp  SearchCtrl.h  SearchTaskManager.h  utils.cpp  utils.hpp
src/config/: DefaultAddresses.cpp  DefaultAddresses.h  DefaultConfig.cpp  DefaultConfig.h  IConfigReader.cpp  IConfigReader.h
src/controllers/: InfoCtrl.cpp  InfoCtrl.h  SearchCtrl.cpp  SearchCtrl.h
src/searchtasks/: ISearchTask.h  InputSearchLiteTask.cpp  InputSearchLiteTask.h  InputSearchTask.cpp  InputSearchTask.h  OutputSearchTask.cpp  OutputSearchTask.h  SearchTask.cpp  SearchTask.h  SpendingsSearchTask.cpp  SpendingsSearchTask.h  TaskFactory.h  TestSearchTask.h
src/utility/: traits.hpp
tests/: CMakeLists.txt  outputsearchtask_tests.cpp  taskmanager_tests.cpp
